fix: address command line with string concatenation (#38)
Fix "Building a command line with string concatenation" in the InteractiveShell.java class.
* General cleanup of related classes.